Added loop to correspond with max cert entries limit returned by CT logs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 aiocontextvars==0.2.1
-aiohttp==3.5.4
+aiohttp==3.6.2
 aiohttp-cors==0.7.0
 asn1crypto==0.24.0
+astroid==2.3.3
 async-timeout==3.0.1
 attrs==19.1.0
 certifi==2019.3.9
@@ -14,31 +15,50 @@ construct==2.9.45
 contextvars==2.3
 croniter==0.3.29
 cryptography==2.6.1
-faust==1.6.0
+faust==1.10.4
+fuzzywuzzy==0.18.0
+h11==0.8.1
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2020.3.31
+http3==0.6.7
+httpx==0.12.1
+hyperframe==5.2.0
 idna==2.8
 idna-ssl==1.1.0
+ImageHash==4.0
 immutables==0.6
-kafka-python==1.4.6
-mode==3.2.2
+isort==4.3.21
+kafka-python==1.4.7
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mode==4.3.2
+mongoengine==0.19.1
 multidict==4.5.2
 mypy-extensions==0.4.1
+numpy==1.18.2
 opentracing==1.3.0
+Pillow==7.1.1
 pycparser==2.19
+pylint==2.4.4
+pymongo==3.10.1
 pyOpenSSL==19.0.0
 python-dateutil==2.8.0
+python-Levenshtein==0.12.0
+PyWavelets==1.1.1
 PyYAML==5.1
-python-rocksdb==0.7.0
-fuzzywuzzy
-python-Levenshtein
-mongoengine
 requests==2.21.0
-robinhood-aiokafka==1.0.3
+requests-async==0.6.2
+rfc3986==1.3.2
+robinhood-aiokafka==1.1.6
+scipy==1.4.1
+selenium==3.141.0
 six==1.12.0
-selenium
+sniffio==1.1.0
 terminaltables==3.1.0
+typed-ast==1.4.1
 typing-extensions==3.7.2
 urllib3==1.24.2
 venusian==1.2.0
-pillow
-ImageHash
+wrapt==1.11.2
 yarl==1.3.0
